@@ -3,6 +3,12 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-07-02:
+
+- Fixed a bug where, if the last command in a subshell was an external
+  command that was terminated by a signal, the exit status ($?) of the
+  subshell did not reflect this by adding 256 to the signal number.
+
 2022-07-01:
 
 - In scripts, $COLUMNS and $LINES are now kept up to date in scripts at
